# WAI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  RUNBOOK.md  catalog_implementation_plan.md  cloudbuild.yaml  deploy.sh  implementation_plan.md  pyproject.toml  requirements.txt  scope_project.md  seed_catalog.py  server.py  setup.py  show_quiz_answers.py  verify_agents.py
AI_Research/: Project Hierarchy Review.txt  WisdomAI Competitive Logic Check.txt
AI_Research/past convo/: Verifying SDK Folder Hierarchy.md
WAI_agent/: agent.py
WAI_agent/.adk/: session.db
WAI_agent/shared/: __init__.py  constants.py  data_compliance_gate.py  luck_elimination.py  models.py  persistence.py  state_machine.py
WAI_agent/sub_agents/: __init__.py
WAI_agent/tools/: __init__.py  curriculum_tools.py  progress_tools.py  quiz_tools.py  reporting_tools.py  routing_tools.py
data/: credentials.json  dev_config.json  sample_competency_matrix.json  seed_data.py  seed_vertex.py  vertex_ai_dtp.json
docs/: manifest.json
docs/agent-system/: adk-agent.md  dev-console.md  skills-and-hooks.md
docs/architecture/: data-and-persistence.md  system-overview.md  tech-stack.md
docs/backend/: api-reference.md  auth-and-roles.md  core-modules.md  services.md
docs/frontend/: pages-and-navigation.md  shared-modules.md
docs/getting-started/: introduction.md  project-structure.md  quick-start.md
docs/learning-engine/: learning-paths.md  quiz-engine.md  readiness-scoring.md  remediation.md
scripts/: hash_password.py  seed_cloud_storage.py
tests/: conftest.py
(+189 files in other folders)
